style updates - layout shift fix still needed for blog posts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,8 @@
 body,
 html {
 	font-family: "Ubuntu Mono", monospace;
-	margin: 0;
+	margin: 0 auto;
+  width: 100%;
 	padding: 0;
 }
 
